--- a/index.html
+++ b/index.html
@@ -6876,6 +6876,7 @@ $('#drugstore-list-by-town').on('change', function() {
 
 });</script>
 
-<script src="./lottie.min.js"></script>
+<script src="./lottie.js"></script>
+<script src="./script_jan.js"></script>
 </body>
 </html>
